kubernetes/cmsweb/networkpolicies/test-clusters/dbs.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs-global-r-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs-global-r
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8252
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs-global-w-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs-global-w
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8253
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs-migrate-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs-migrate
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8257
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs-phys03-r-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs-phys03-r
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8254
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs-phys03-w-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs-phys03-w
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8255
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-global-m-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-global-m
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9257
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-global-r-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-global-r
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9252
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-global-w-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-global-w
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9253
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-migrate-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-migrate
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8259
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-migration-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-migration
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8259
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-phys03-m-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-phys03-m
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9257
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-phys03-r-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-phys03-r
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9254
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-phys03-w-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-phys03-w
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9255
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-writer-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-writer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8260
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbsproxy-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbsproxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8222
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-global-migration-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-global-migration
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9251
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dbs2go-phys03-migration-network-policy
  namespace: dbs
spec:
  podSelector:
    matchLabels:
      app: dbs2go-phys03-migration
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9251
