kubernetes/cmsweb/networkpolicies/test-clusters/http.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cmsamqproxy-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: cmsamqproxy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8300
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cmskv-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: cmskv
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9212
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exitcodes-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: exitcodes
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 9201
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpgo-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: httpgo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8888
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: imagebot-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: imagebot
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8111
