kubernetes/cmsweb/networkpolicies/test-clusters/httpgo-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpgo-network-policy
  namespace: http
spec:
  podSelector:
    matchLabels:
      app: httpgo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
#      ports:
#        - protocol: TCP
#          port: 8888
