kubernetes/cmsweb/networkpolicies/test-clusters/ruciocm.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitor-network-policy
  namespace: ruciocm
spec:
  podSelector:
    matchLabels:
      app: monitor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8400
