kubernetes/cmsweb/networkpolicies/test-clusters/tzero.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: t0wmadatasvc-network-policy
  namespace: tzero
spec:
  podSelector:
    matchLabels:
      app: t0wmadatasvc
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8308
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: t0reqmon-network-policy
  namespace: tzero
spec:
  podSelector:
    matchLabels:
      app: t0reqmon
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: scitokens-proxy-server
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: x509-proxy-server
      ports:
        - protocol: TCP
          port: 8243
